syntax = "proto3";

package pb;

option go_package = "github.com/TranQuocToan1996/pb";

option java_package        = "pcbookJava";
option java_multiple_files = true;  // Big file -> small one

import "laptop_message.proto";

message CreateLaptopRequest {
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 1;
}

service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
}